methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:9: error: not found: value setCouleur
  setCouleur(c)
  ^PatternPicture:25: error: not found: value setCouleur
  setCouleur(c)
  ^