methods.picture.PatternPicture.scala.code
override def run() {
  faitDemiVG(Color.blue) 
  faitDemiVD(Color.red)
}

  

def faitDemiVG(c:Color) {
  setCouleur(c)
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance(2)
  gauche()
  
}

def faitDemiVD(c:Color) {
  setCouleur(c)
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  
}
